--- a/data.ipynb
+++ b/data.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-22T19:01:40.211467Z",
-     "start_time": "2023-10-22T19:01:40.193368Z"
+     "end_time": "2023-10-22T21:33:51.264444Z",
+     "start_time": "2023-10-22T21:33:50.756789Z"
     }
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sc"
+    "import matplotlib"
    ]
   },
   {
@@ -346,63 +346,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "def gradient(par, data):\n",
     "    grad = np.zeros(len(par))\n",
     "    X, Y = data\n",
-    "    for i in range (0,)"
+    "    for n in range (0,(X)):\n",
+    "        f = model(X, par)\n",
+    "        x, y = X[n], Y[n]\n",
+    "        deltaf = dModel(X,par)\n",
+    "        s = -(y-f)*deltaf/(y*f+(1-y)*(1-f))\n",
+    "        grad = grad + s\n",
+    "    return grad"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-22T22:51:12.049019Z",
+     "start_time": "2023-10-22T22:51:12.047604Z"
+    }
    },
    "id": "756f21094df92d37"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Function to compute the sigmoid\n",
-    "def model(x, par):\n",
-    "    z = x @ par\n",
-    "    return 1 / (1 + np.exp(-z))\n",
-    "\n",
-    "# Define the gradient function\n",
-    "def gradient(par, data):\n",
-    "    grad = np.zeros(len(par))\n",
-    "    X, Y = data\n",
-    "\n",
-    "    for n in range(len(Y)):\n",
-    "        x, y = X[n], Y[n]\n",
-    "        f = model(x, par)\n",
-    "        s = -(y - f) * x\n",
-    "        grad = grad + s\n",
-    "\n",
-    "    return grad\n",
-    "\n",
-    "# Define input features and model parameters\n",
-    "X = np.array([[1, 2], [3, 4], [5, 6]])\n",
-    "par = np.array([0.5, -0.3])\n",
-    "\n",
-    "# Define labels\n",
-    "Y = np.array([0, 1, 0])\n",
-    "\n",
-    "# Data as a tuple\n",
-    "data = (X, Y)\n",
-    "\n",
-    "# Calculate the gradient\n",
-    "result = gradient(par, data)\n",
-    "\n",
-    "print(result)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2801eb463fa95d98"
   }
  ],
  "metadata": {
