--- a/data.ipynb
+++ b/data.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "def gradient(par, data):\n",
@@ -356,18 +356,53 @@
     "        f = model(X, par)\n",
     "        x, y = X[n], Y[n]\n",
     "        deltaf = dModel(X,par)\n",
-    "        s = -(y-f)*deltaf/(y*f+(1-y)*(1-f))\n",
+    "        # s = -(y-f)*deltaf/(y*f+(1-y)*(1-f)) #not sure if deltaf should be here\n",
+    "        s = -(y-f)*dModel(X,par)/(y*f+(1-y)*(1-f))\n",
     "        grad = grad + s\n",
     "    return grad"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T22:51:12.049019Z",
-     "start_time": "2023-10-22T22:51:12.047604Z"
+     "end_time": "2023-10-22T22:52:12.310127Z",
+     "start_time": "2023-10-22T22:52:12.303359Z"
     }
    },
    "id": "756f21094df92d37"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [],
+   "source": [
+    "def train(par0, eta, T, data):\n",
+    "    par = par0\n",
+    "    obj =[ ]\n",
+    "    for t in range (0,T):\n",
+    "        ell = objective(par,data)\n",
+    "        obj.append(ell)\n",
+    "        grad = gradient(par,data)\n",
+    "        par = par - grad*ell\n",
+    "    return par, obj"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-22T23:09:57.940452Z",
+     "start_time": "2023-10-22T23:09:57.933321Z"
+    }
+   },
+   "id": "6ecf597ae837d2a0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c8fd55c591b6b18e"
   }
  ],
  "metadata": {
