--- a/data.ipynb
+++ b/data.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 278,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-22T21:33:51.264444Z",
-     "start_time": "2023-10-22T21:33:50.756789Z"
+     "end_time": "2023-10-23T16:34:24.863959Z",
+     "start_time": "2023-10-23T16:34:24.841507Z"
     }
    },
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 279,
    "outputs": [],
    "source": [
     "def generateData(d, N, noise=0.1):\n",
@@ -28,25 +28,27 @@
     "    lambdaTrue = -1 + 2 * np.tan(np.random.randn(len(X[0])))\n",
     "    Y = 1 * ((X @ lambdaTrue + noise * np.random.randn(N)) > 0)\n",
     "    D = X, Y\n",
+    "    print(len(D))\n",
     "    return D"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T19:01:40.211875Z",
-     "start_time": "2023-10-22T19:01:40.195983Z"
+     "end_time": "2023-10-23T16:34:24.864166Z",
+     "start_time": "2023-10-23T16:34:24.848273Z"
     }
    },
    "id": "5bb4c3740fc6c4d9"
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 280,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "([array([ 1.        , -0.20470766,  0.47894334, -0.51943872, -0.5557303 ,\n",
       "        1.96578057,  1.39340583,  0.09290788,  0.28174615,  0.76902257,\n",
       "        1.24643474]), array([ 1.        ,  1.00718936, -1.29622111,  0.27499163,  0.22891288,\n",
@@ -271,15 +273,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T19:01:40.248806Z",
-     "start_time": "2023-10-22T19:01:40.211776Z"
+     "end_time": "2023-10-23T16:34:24.888583Z",
+     "start_time": "2023-10-23T16:34:24.861962Z"
     }
    },
    "id": "935e0ca9b66578df"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 281,
    "outputs": [],
    "source": [
     "def model(x, par):\n",
@@ -290,34 +292,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T19:01:40.248979Z",
-     "start_time": "2023-10-22T19:01:40.227062Z"
+     "end_time": "2023-10-23T16:34:24.888867Z",
+     "start_time": "2023-10-23T16:34:24.866647Z"
     }
    },
    "id": "97c12095ad467be9"
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 282,
    "outputs": [],
    "source": [
     "def dModel(x, par):\n",
-    "    f = np.power(1 + np.power(np.e, -np.dot(x, par)), -1)\n",
-    "    gradient = f * (1 - f) * par\n",
+    "    f=np.power( (1 + np.power(np.e, (np.dot(x, par)))),-1)\n",
+    "    print(x)\n",
+    "    gradient = np.dot(f * (1 - f) , x)\n",
     "    return gradient"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T19:03:20.734699Z",
-     "start_time": "2023-10-22T19:03:20.730505Z"
+     "end_time": "2023-10-23T16:34:24.888955Z",
+     "start_time": "2023-10-23T16:34:24.870082Z"
     }
    },
    "id": "23a58cbb414dd71b"
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 283,
    "outputs": [],
    "source": [
     "def objective(par, data):\n",
@@ -338,45 +341,46 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T21:27:06.193771Z",
-     "start_time": "2023-10-22T21:27:06.188646Z"
+     "end_time": "2023-10-23T16:34:24.889069Z",
+     "start_time": "2023-10-23T16:34:24.873517Z"
     }
    },
    "id": "f1fe5e5e4ff2b356"
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 284,
    "outputs": [],
    "source": [
     "def gradient(par, data):\n",
     "    grad = np.zeros(len(par))\n",
     "    X, Y = data\n",
-    "    for n in range (0,(X)):\n",
+    "    for n in range (0,len(X)):\n",
     "        f = model(X, par)\n",
     "        x, y = X[n], Y[n]\n",
-    "        deltaf = dModel(X,par)\n",
-    "        # s = -(y-f)*deltaf/(y*f+(1-y)*(1-f)) #not sure if deltaf should be here\n",
-    "        s = -(y-f)*dModel(X,par)/(y*f+(1-y)*(1-f))\n",
-    "        grad = grad + s\n",
+    "        # deltaf = (dModel(X,par))\n",
+    "        s = -(y-f)*(dModel(x,par))/(y * f + (1 - y) * (1 - f)) #not sure if deltaf should be here\n",
+    "        # s = -(y-f)/(y*f+(1-y)*(1-f))\n",
+    "        grad = grad+ s\n",
     "    return grad"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T22:52:12.310127Z",
-     "start_time": "2023-10-22T22:52:12.303359Z"
+     "end_time": "2023-10-23T16:34:24.889118Z",
+     "start_time": "2023-10-23T16:34:24.876917Z"
     }
    },
    "id": "756f21094df92d37"
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 285,
    "outputs": [],
    "source": [
     "def train(par0, eta, T, data):\n",
     "    par = par0\n",
+    "    print(len(D))\n",
     "    obj =[ ]\n",
     "    for t in range (0,T):\n",
     "        ell = objective(par,data)\n",
@@ -388,19 +392,58 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T23:09:57.940452Z",
-     "start_time": "2023-10-22T23:09:57.933321Z"
+     "end_time": "2023-10-23T16:34:24.889163Z",
+     "start_time": "2023-10-23T16:34:24.880281Z"
     }
    },
    "id": "6ecf597ae837d2a0"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 286,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "[ 1.         -0.20470766  0.47894334 -0.51943872 -0.5557303   1.96578057\n",
+      "  1.39340583  0.09290788  0.28174615  0.76902257  1.24643474]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (50,) (11,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[286], line 10\u001B[0m\n\u001B[1;32m      8\u001B[0m itterations\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5\u001B[39m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m (\u001B[38;5;241m0\u001B[39m,itterations):\n\u001B[0;32m---> 10\u001B[0m     epoch\u001B[38;5;241m.\u001B[39mappend((train(np\u001B[38;5;241m.\u001B[39mrandom\u001B[38;5;241m.\u001B[39mnormal(\u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;28mlen\u001B[39m(x_trainning[\u001B[38;5;241m0\u001B[39m])), eta, itterations, (x_trainning, y_traning))))\n",
+      "Cell \u001B[0;32mIn[285], line 8\u001B[0m, in \u001B[0;36mtrain\u001B[0;34m(par0, eta, T, data)\u001B[0m\n\u001B[1;32m      6\u001B[0m     ell \u001B[38;5;241m=\u001B[39m objective(par,data)\n\u001B[1;32m      7\u001B[0m     obj\u001B[38;5;241m.\u001B[39mappend(ell)\n\u001B[0;32m----> 8\u001B[0m     grad \u001B[38;5;241m=\u001B[39m gradient(par,data)\n\u001B[1;32m      9\u001B[0m     par \u001B[38;5;241m=\u001B[39m par \u001B[38;5;241m-\u001B[39m grad\u001B[38;5;241m*\u001B[39mell\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m par, obj\n",
+      "Cell \u001B[0;32mIn[284], line 8\u001B[0m, in \u001B[0;36mgradient\u001B[0;34m(par, data)\u001B[0m\n\u001B[1;32m      6\u001B[0m x, y \u001B[38;5;241m=\u001B[39m X[n], Y[n]\n\u001B[1;32m      7\u001B[0m \u001B[38;5;66;03m# deltaf = (dModel(X,par))\u001B[39;00m\n\u001B[0;32m----> 8\u001B[0m s \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m-\u001B[39m(y\u001B[38;5;241m-\u001B[39mf)\u001B[38;5;241m*\u001B[39m(dModel(x,par))\u001B[38;5;241m/\u001B[39m(y \u001B[38;5;241m*\u001B[39m f \u001B[38;5;241m+\u001B[39m (\u001B[38;5;241m1\u001B[39m \u001B[38;5;241m-\u001B[39m y) \u001B[38;5;241m*\u001B[39m (\u001B[38;5;241m1\u001B[39m \u001B[38;5;241m-\u001B[39m f)) \u001B[38;5;66;03m#not sure if deltaf should be here\u001B[39;00m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;66;03m# s = -(y-f)/(y*f+(1-y)*(1-f))\u001B[39;00m\n\u001B[1;32m     10\u001B[0m grad \u001B[38;5;241m=\u001B[39m grad\u001B[38;5;241m+\u001B[39m s\n",
+      "\u001B[0;31mValueError\u001B[0m: operands could not be broadcast together with shapes (50,) (11,) "
+     ]
+    }
+   ],
+   "source": [
+    "lambda1 = np.transpose(np.full(100, 0.01))\n",
+    "d =10\n",
+    "N=100\n",
+    "D=generateData(d,N)\n",
+    "x_trainning,x_testing,y_traning,y_testing=split(D,50)\n",
+    "eta = 0.01\n",
+    "epoch=[]\n",
+    "itterations=5\n",
+    "for i in range (0,itterations):\n",
+    "    epoch.append((train(np.random.normal(0, 1, len(x_trainning[0])), eta, itterations, (x_trainning, y_traning))))"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-23T16:34:24.907180Z",
+     "start_time": "2023-10-23T16:34:24.883815Z"
+    }
    },
    "id": "c8fd55c591b6b18e"
   }
