--- a/data.ipynb
+++ b/data.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stderr",
@@ -462,25 +462,6 @@
       "  arrmean = um.true_divide(arrmean, div, out=arrmean,\n",
       "/Users/haydenamarr/anaconda3/lib/python3.11/site-packages/numpy/core/_methods.py:261: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([[-0.8117562 , -0.8117562 ,  0.01925204, ..., -0.8117562 ,\n",
-      "        -0.8117562 , -0.8117562 ],\n",
-      "       [-0.8117562 , -0.8117562 , -0.8117562 , ...,  0.85026027,\n",
-      "        -0.8117562 , -0.8117562 ],\n",
-      "       [-0.8117562 , -0.8117562 , -0.8117562 , ...,  1.84747015,\n",
-      "         0.68405863, -0.8117562 ],\n",
-      "       ...,\n",
-      "       [-0.8117562 , -0.8117562 , -0.64555455, ...,  0.18545368,\n",
-      "        -0.8117562 , -0.8117562 ],\n",
-      "       [-0.8117562 , -0.8117562 , -0.4793529 , ...,  1.18266357,\n",
-      "        -0.8117562 , -0.8117562 ],\n",
-      "       [-0.8117562 , -0.8117562 ,  0.85026027, ...,  1.18266357,\n",
-      "        -0.64555455, -0.8117562 ]]), array([0., 1., 2., ..., 8., 9., 8.]))\n"
      ]
     },
     {
@@ -612,16 +593,30 @@
     "lambda1 = np.transpose(np.full(11, 0.01))\n",
     "d = 50\n",
     "N = 0.0001\n",
-    "D = generateData(d, N)\n",
-    "x_training, x_testing, y_training, y_testing = split(D, 50)\n",
+    "# D = generateData(d, N)\n",
+    "# x_training, x_testing, y_training, y_testing = split(D, 50)\n",
     "eta = 0.0001\n",
     "epoch = []\n",
     "itterations = 10\n",
     "\n",
-    "lambda0 = np.random.normal(0, N, 65)\n",
-    "for epoch in range (0, d):\n",
-    "    for i in range(len(X_train)):\n",
-    "    \n",
+    "lambda0 = np.random.normal(0, N, 64)\n",
+    "\n",
+    "d01_X_training_normalised = d01_training_normalised[0]\n",
+    "d01_Y_training_normalised = d01_training_normalised[1]\n",
+    "d12_X_training_normalised = d12_training_normalised[0]\n",
+    "d12_Y_training_normalised = d12_training_normalised[1]\n",
+    "d23_X_training_normalised = d23_training_normalised[0]\n",
+    "d23_Y_training_normalised = d23_training_normalised[1]\n",
+    "d30_X_training_normalised = d30_training_normalised[0]\n",
+    "d30_Y_training_normalised = d30_training_normalised[1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "lambda_d01 = train(lambda0, eta, d, (d01_X_training_normalised, d01_Y_training_normalised))\n",
+    "lambda_d12 = train(lambda0, eta, d, (d12_X_training_normalised, d12_Y_training_normalised))\n",
+    "lambda_d23 = train(lambda0, eta, d, (d23_X_training_normalised, d23_Y_training_normalised))\n",
+    "lambda_d30 = train(lambda0, eta, d, (d30_X_training_normalised, d30_Y_training_normalised))\n",
+    "\n",
     "for k in range(0, 10):\n",
     "    image_matrix = np.reshape(X[k], (8, 8))\n",
     "    plt.matshow(image_matrix)"
@@ -629,8 +624,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-25T10:53:14.149535Z",
-     "start_time": "2023-10-25T10:53:13.074535Z"
+     "end_time": "2023-10-25T23:36:44.182189Z",
+     "start_time": "2023-10-25T23:36:42.929134Z"
     }
    },
    "id": "fffa7454cc5b789f"
